# qwc-permalink-service

./: Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
.github/workflows/: main.yml
schemas/: qwc-permalink-service.json
src/: server.py
tests/: api_tests.py
